<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/stationNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:layout_gravity="center_vertical"
            android:hint="@string/searchStation"/>
        <ImageButton
            android:id="@+id/stationSearchSettingsButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_settings"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/stationSearchSettingsLayout"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="left"
            android:layout_marginLeft="16dp"
            android:text="@string/hide"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
            <CheckBox
                android:id="@+id/stationClosedCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:layout_gravity="top|center_vertical"
                android:text="@string/closedStations"/>
            <CheckBox
                android:id="@+id/stationEmptyCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:layout_gravity="top|center_vertical"
                android:text="@string/emptyStations"/>
            <CheckBox
                android:id="@+id/stationFullCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:layout_gravity="top|center_vertical"
                android:text="@string/fullStations"/>
        </LinearLayout>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/stationsRecyclerView"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>